--- a/style.css
+++ b/style.css
@@ -5,21 +5,121 @@
 body {
     background-color: "9b59b6";
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content:center;
     margin: 0;
     min-height: 100vh;
 }
+body {font-family: Arial, Helvetica, sans-serif;}
+/* Set a style for all buttons */
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+button:hover {
+  opacity:1;
+}
+
+/* Float cancel and delete buttons and add an equal width */
+.cancelbtn, .deletebtn {
+  float: left;
+  width: 50%;
+}
+
+/* Add a color to the cancel button */
+.cancelbtn {
+  background-color: #ccc;
+  color: black;
+}
+
+/* Add a color to the delete button */
+.deletebtn {
+  background-color: #f44336;
+}
+
+/* Add padding and center-align text to the container */
+.container-model {
+  padding: 16px;
+  text-align: center;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 2; /* Sit on top */
+  left: 0;
+  top:50%;
+  bottom: 0%;
+  width: 80%; /* Full width */
+  height: 40%; /* Full height */
+ /*overflow: auto; /* Enable scroll if needed */
+  background-color: #474e5d;
+  padding-top: 50px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* Style the horizontal ruler */
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+ 
+/* The Modal Close Button (x) */
+.close {
+  position: absolute;
+  right: 35px;
+  top: 15px;
+  font-size: 40px;
+  font-weight: bold;
+  color: #f1f1f1;
+}
+
+.close:hover,
+.close:focus {
+  color: #f44336;
+  cursor: pointer;
+}
+
+/* Clear floats */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Change styles for cancel button and delete button on extra small screens */
+@media screen and (max-width: 300px) {
+  .cancelbtn, .deletebtn {
+     width: 75%;
+  }
+}
+
 .container{
-    background-color: #fff;
+    background-color: rgb(236, 242, 245);
     border-radius: 5px;
     box-shadow: 0 2px  5px rgbo(0, 0, 0, 0);
-    max-width: 100%;
+    max-width: 50%;
+    margin: 0;
 }
 .header {
-    background-color: #f7f7f7f7;
+    background-color: #f0e9e9f7;
     border-bottom: 1px sold #f0f0f0;
-    padding: 20px 40px;
+    padding: 20px 20px;
 }
 .header h2 {
     margin: 0;
@@ -28,8 +128,8 @@ body {
     padding:40px;
 }
 .form-control {
-    margin-bottom: 10px;
-    padding-bottom:20px;
+    margin-bottom: 1 px;
+    padding-bottom: 1 px;
     position: relative;
 }
 .form-control lable {
@@ -40,7 +140,7 @@ body {
     display: block;
    width: 100%;
    border: 2px solid #f0f0f0f0;
-   font-size: 14px;
+   font-size: 12px;
    font-family: inherit;
    padding: 10px;
 }
@@ -59,7 +159,7 @@ body {
     visibility: hidden;
 }
 .form-control.success i.fa-check-circle {
-    color: rgb(7, 71, 7);
+    color: rgb(10, 121, 10);
     visibility: visible;
 
 }
@@ -91,8 +191,18 @@ body {
     font-size:16px;
     padding: 10px;
     width: 100%;
+}
+.font {
+    font-size: 18;
+    color: black;
+    margin: 5px 0 ;
+    font-weight: bold;
 
 }
+.btn-danger {
+        padding: 5px 5px;
+}
+
 
 
 
