--- a/Css/custom.css
+++ b/Css/custom.css
@@ -6,5 +6,20 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: #fff;
   }
+   
+   /* .users {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #fff;
+    padding: 1rem;
+    border-radius: 0.7rem;
+    box-shadow: 5px 5px 10px 0 #333;
+    margin: 1.5rem 0; */
   
+  /* } */
+  .users:hover {
+    box-shadow: 5px 5px 10px 2px #333;
+  }
